--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,11 +20,12 @@
                <tr>
                   <th>
                      <%= link_to user_path(book.user_id) do %>
-                     <%= attachment_image_tag book.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+                     <%= attachment_image_tag book.user,:profile_image, size: '50x50', fallback: "no_image.jpg" %>
                      <% end %>
                   </th>
                   <th><%= link_to book.title, book_path(book) %><th>
                   <th><%= book.body %></th>
+                  <th><p><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></p></th>
                </tr>
                <% end %>
             </tbody>
