--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,6 @@
   <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"タイトル"%></br>
   <label for="inputBody">Introduction</label>
   <%= f.text_field :body, autofocus: true, id:"body", placeholder:"ボディー"%></br>
-
   <%= f.submit "Update Book",class:"btn btn-success" %>
 <% end %>
 
@@ -13,15 +12,15 @@
 
 
 <% if flash[:notice] %>
-      <div class="flash">
-        <%= flash[:notice] %>
-      </div>
+   <div class="flash">
+      <%= flash[:notice] %>
+   </div>
 <% end %>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-    <%= "error" %>
-  <% end %>
+   <%= @book.errors.count %>件のerrorが発生しました
+   <% @book.errors.full_messages.each do |message| %>
+      <%= message %>
+      <%= "error" %>
+   <% end %>
 <% end %>
