--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
    <div class="row">
-      <div class="col-md-3">
+      <div class="col-xs-3">
          <%= render 'layouts/list', user: @user %>
       </div>
 
 
-      <div class="col-md-8 offset-md-1">
+      <div class="col-xs-9 offset-md-1">
          <h2>Books</h2>
             <table class="table table-hover table-inverse">
             <thead>
@@ -25,7 +25,20 @@
                   </th>
                   <th><%= link_to book.title, book_path(book) %><th>
                   <th><%= book.body %></th>
-                  <th><p><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></p></th>
+                  <th><% if book.favorited_by?(current_user) %>
+                        <p>
+                           <%= link_to book_favorites_path(book), method: :delete do %>
+                           ♥<%= book.favorites.count %>
+                           <% end %>
+                        </p>
+                           <% else %>
+                        <p>
+                           <%= link_to book_favorites_path(book), method: :post do %>
+                           ♡<%= book.favorites.count %>
+                           <% end %>
+                        </p>
+                      <% end %></th>
+                  <th><p><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></p></th>
                </tr>
                <% end %>
             </tbody>
