--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,16 +1,16 @@
 <div class="container">  <!-- この行を追加 -->
    <div class="row">
-      <div class="col-md-3">
+      <div class="col-xs-3">
          <%= render 'layouts/list', user: @show_user %>
          <pre>　</pre>
       </div>
-      <div class="col-md-8 offset-md-1">
+      <div class="col-xs-9 offset-md-1">
          <h2>Book detail</h2>
             <table class="table table-hover table-inverse">
                   <tr>
                      <th><%= attachment_image_tag @show_book.user, :profile_image, :fill, 80, 80, fallback: "no_image.jpg" %>
                         <%= link_to @show_book.user.name, user_path(@show_user) %><th>
-　　                 <th><%= link_to @show_book.title, book_path(@show_book.id) %><th>
+                     <th><%= link_to @show_book.title, book_path(@show_book.id) %><th>
                      <th><%= @show_book.body %></th>
                      <th>
                         <% if @show_user.id == current_user.id %>
@@ -25,13 +25,13 @@
                      <th><% if @show_book.favorited_by?(current_user) %>
                         <p>
                            <%= link_to book_favorites_path(@show_book), method: :delete do %>
-                           ♥<%= @show_book.favorites.count %> いいね
+                           ♥<%= @show_book.favorites.count %>
                            <% end %>
                         </p>
                            <% else %>
                         <p>
                            <%= link_to book_favorites_path(@show_book), method: :post do %>
-                           ♡<%= @show_book.favorites.count %> いいね
+                           ♡<%= @show_book.favorites.count %>
                            <% end %>
                         </p>
                            <% end %>
@@ -41,25 +41,27 @@
             </table>
 
          <div class="comments">
-            <p>コメント件数：<%= @show_book.post_comments.count %></p>
-               <% @show_book.post_comments.each do |post_comment| %>
+            <p>コメント件数：<%= @show_book.book_comments.count %></p>
+               <% @show_book.book_comments.each do |book_comment| %>
             <p><%= attachment_image_tag @show_book.user, :profile_image, :fill, 80, 80, fallback: "no_image.jpg" %></p>
-               ユーザーネーム：<%= post_comment.user.name %></br>
-               日時：<%= post_comment.created_at.strftime('%Y/%m/%d') %></br>
-               コメント：<%= post_comment.comment %></br>
-               <% if post_comment.user == current_user %>
+               ユーザーネーム：<%= book_comment.user.name %></br>
+               日時：<%= book_comment.created_at.strftime('%Y/%m/%d') %></br>
+               コメント：<%= book_comment.comment %></br>
+               <% if book_comment.user == current_user %>
             <div class="comment-delete">
-               <%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), method: :delete %>
+               <% if @show_user.id == current_user.id %>
+               <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+               <% end %>
             </div>
                <% end %>
                <% end %>
-            </div>
          </div>
-            <div class="new-comment">
-               <%= form_with(model:[@show_book, @post_comment], local: true) do |f| %>
-               <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-               <%= f.submit "Submit" ,class:"btn btn-success"%>
-               <% end %>
-        </div>
-    </div>
+      </div>
+      <div class="new-comment">
+         <%= form_with(model:[@show_book, @book_comment], local: true) do |f| %>
+            <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+            <%= f.submit "Create Book comment" ,class:"btn btn-success"%>
+         <% end %>
+      </div>
+   </div>
 </div>
