--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <div class="container">
-          <a class="navbar-brand p-1" href="/"><p>Bookers</p></a>
+          <li class="navbar-brand p-1"><p>Bookers</p></li>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,7 +25,7 @@
 
             <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to "HOME", new_user_session_path, class: "fas fa-home nav-link text-light" %>
+              <%= link_to "Home", new_user_session_path, class: "fas fa-home nav-link text-light" %>
             </li>
             <li class="nav-item">
               <%= link_to "Users",  users_path, class: 'fas fa-users nav-link text-light' %>
@@ -38,13 +38,13 @@
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "HOME", root_path, class: 'fas fa-home nav-link text-light' %>
+              <%= link_to "Home", root_path, class: 'fas fa-home nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to "About", home_about_path, class: 'fas fa-link nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
+              <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to "login", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
