--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 <% if @user.errors.any? %>
-  <%= @user.errors.count %>件のエラーが発生しました
+  <%= @user.errors.count %>件のerrorが発生しました
   <% @user.errors.full_messages.each do |message| %>
     <%= message %>
   <% end %>
