--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
    <div class="row">
-       <div class="col-md-3">
+       <div class="col-xs-3">
          <%= render 'layouts/list', user: @user %>
        </div>
-       <div class="col-md-8 offset-md-1">
+       <div class="col-xs-9 offset-md-1">
           <h2>Users</h2>
              <table class="table table-hover table-inverse">
                 <thead>
