--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,15 @@
 <div class="container">  <!-- この行を追加 -->
   <div class="row">
-<div class="col-md-3">
+<div class="col-xs-3">
 <%= render 'layouts/list', user: @user %>
  </div>
 
 
-<div class="col-md-8 offset-md-1">
+<div class="col-xs-9 offset-md-1">
   <h2>Books</h2>
   <table class="table table-hover table-inverse">
   <thead>
-　    <th></th>
+      <th></th>
 　　  <th>title</th>
 　　  <th>body</th>
       <th colspan="3"></th>
@@ -24,11 +24,11 @@
     </td>
 　　<td><%= link_to book.title, book_path(book) %></td>
 　　<td><%= book.body %></td>
+　　<td><p>コメント件数：<%= book.book_comments.count %></p></td>
 　　</tr>
 　  <% end %>
 　</tbody>
   </table>
-
 </div>
 </div>
 </div>
